Fix footer spacing

--- a/src/stylesheets/module/_footer.scss
+++ b/src/stylesheets/module/_footer.scss
@@ -12,7 +12,7 @@
     small {
         color: #b0abab;
         display: block;
-        padding-top: 35px;
+        padding-top: 22px;
     }
 }
 
@@ -22,5 +22,5 @@
 
 .footer-title {
     font-weight: 700;
-    margin-bottom: 1em;
+    margin-bottom: .7em;
 }
